# protocol-testing

./: Makefile  docker-compose.yml
grpc-server/: Cargo.toml  Makefile  build.rs
grpc-server/docker-files/: Dockerfile  Dockerfile2
grpc-server/src/: lib.rs
scripts/: cards.proto  grpc.js  http-hs.js  http-rs.js  settings.js
web-server/: Dockerfile  LICENSE  server.sh  web-server.cabal
web-server/app/: Main.hs
web-server/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
